- created signup form with reactive forms - added .nvmr

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<course title="Course Detail">
+<!-- <course title="Course Detail">
   <ng-content></ng-content>
-</course>
-
+</course> -->
+<signup-form></signup-form>
