added custom validation

--- a/src/app/signup-form/signup-form.component.html
+++ b/src/app/signup-form/signup-form.component.html
@@ -13,6 +13,9 @@
             <div *ngIf="username.errors.minlength">
                 User name field should have minimun {{ username.errors.minlength.requiredLength }}.
             </div>
+            <div *ngIf="username.errors.cannotContainSpace">
+                User name can not contain space.
+            </div>
         </div>
 
     </div>
