--- a/src/app/signup-form/signup-form.component.html
+++ b/src/app/signup-form/signup-form.component.html
@@ -2,39 +2,41 @@
     <div *ngIf="form.errors" class="alert alert-danger">
         Username or password is wrong.
     </div> 
-    <div class="form-group">
-        <label for="username">Username</label>
-        <input 
-            formControlName="username" 
-            id="username" 
-            type="text" 
-            class="form-control">
-        <div *ngIf="username.pending">Checking for uniqueness ...</div>
-        <div *ngIf="username.touched && username.invalid" class="alert alert-danger">
-            <div *ngIf="username.errors.required">
-                User name field is required.
+    <div formGroupName="account">
+        <div class="form-group">
+            <label for="username">Username</label>
+            <input 
+                formControlName="username" 
+                id="username" 
+                type="text" 
+                class="form-control">
+            <div *ngIf="username.pending">Checking for uniqueness ...</div>
+            <div *ngIf="username.touched && username.invalid" class="alert alert-danger">
+                <div *ngIf="username.errors.required">
+                    User name field is required.
+                </div>
+                <div *ngIf="username.errors.minlength">
+                    User name field should have minimun {{ username.errors.minlength.requiredLength }}.
+                </div>
+                <div *ngIf="username.errors.cannotContainSpace">
+                    User name can not contain space.
+                </div>
+                <div *ngIf="username.errors.shouldBeUnique">
+                    User name already taken.
+                </div>
             </div>
-            <div *ngIf="username.errors.minlength">
-                User name field should have minimun {{ username.errors.minlength.requiredLength }}.
-            </div>
-            <div *ngIf="username.errors.cannotContainSpace">
-                User name can not contain space.
-            </div>
-            <div *ngIf="username.errors.shouldBeUnique">
-                User name already taken.
-            </div>
-        </div>
 
-    </div>
-    <div class="form-group">
-        <label for="password">Password</label>
-        <input 
-            formControlName="password" 
-            id="password" 
-            type="text" 
-            class="form-control">
-        <div *ngIf="password.touched && password.invalid" class="alert alert-danger">
-            Password is required.
+        </div>
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input 
+                formControlName="password" 
+                id="password" 
+                type="text" 
+                class="form-control">
+            <div *ngIf="password.touched && password.invalid" class="alert alert-danger">
+                Password is required.
+            </div>
         </div>
     </div>
     <button class="btn btn-primary" type="submit">Sign Up</button>
