--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <!-- <course title="Course Detail">
   <ng-content></ng-content>
 </course> -->
-<signup-form></signup-form>
+<app-new-course-form></app-new-course-form>
