--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,1 @@
-<!-- <course title="Course Detail">
-  <ng-content></ng-content>
-</course> -->
-<app-new-course-form></app-new-course-form>
+<change-password></change-password>
